fixed titles on mobile

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -121,12 +121,12 @@ body {
     font-size: 3.36rem;
   }
 }
-
+/* 
 @media (max-width: 768px) {
   .display-1 {
     font-size: 2.94rem;
     font-size: calc(2.12rem + (4.2 - 2.12) * ((100vw - 20rem) / (48 - 20)));
-    /* line-height: calc(1.1 * (2.12rem + (4.2 - 2.12) * ((100vw - 20rem) / (48 - 20)))); */
+    line-height: calc(1.1 * (2.12rem + (4.2 - 2.12) * ((100vw - 20rem) / (48 - 20))));
     line-height: 4rem;
   }
 
@@ -153,7 +153,8 @@ body {
     font-size: calc(1.14rem + (1.4 - 1.14) * ((100vw - 20rem) / (48 - 20)));
     line-height: calc(1.4 * (1.14rem + (1.4 - 1.14) * ((100vw - 20rem) / (48 - 20))));
   }
-}
+} */
+
 
 @media (min-width: 992px) and (max-width: 1400px) {
   .display-1 {
